fixed misaligned center text when all cards have been learned

--- a/root/static/styles.css
+++ b/root/static/styles.css
@@ -432,6 +432,7 @@ main {
     height: 100%;
     color: #777;
     font-size: 25px;
+    text-align: center;
 }
 
 .center-message .flag {
